# inari

./: .gitignore  .markdownlint-cli2.mjs  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  justfile  mise.toml  package.json  pyproject.toml  rustfmt.toml  tegami.config.ts  tsconfig.json
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/actions/publish-check-status/: action.yaml
.github/workflows/: desktop.yaml  helm-release.yaml  kubernetes.yaml  release.yaml  tegami-pr-comment.yaml  tegami-pr.yaml
.tegami/: 2026-07-13-7f4b21c8.md  2026-07-13-a12d9e6f.md  2026-07-13-c91e6b42.md  2026-07-15-4f92a7cd.md  2026-07-15-6d4c91ef.md  2026-07-15-a42f9e1c.md  2026-07-16-8c7f2a1.md  2026-07-16-a6f2c1.md  2026-07-17-a1c7d4.md  publish-lock.yaml
contracts/: local-agent.events.json  local-agent.openapi.json
crates/inari-agent-client/: CHANGELOG.md  Cargo.toml  build.rs
crates/inari-agent-client/src/: client.rs  error.rs  events.rs  identity.rs  lib.rs  model.rs  pairing.rs  service.rs  transport.rs
crates/inari-device-center/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/inari-device-center/src/: app.rs  assets.rs  main.rs
crates/inari-device-center/src/app/: runtime.rs  setup.rs
crates/inari-device-center/src/features/: activity.rs  devices.rs  mod.rs  overview.rs  setup.rs  support.rs
crates/inari-device-center/src/infrastructure/: logging.rs  mod.rs  platform.rs  runtime.rs  tray.rs
crates/inari-device-center/src/ui/: components.rs  mod.rs  palette.rs
crates/inari-gateway/: Cargo.toml
crates/inari-gateway/migrations/: 0001_gateway.sql  0002_publication_status_index.sql  0003_remove_static_enrollment_tokens.sql
crates/inari-gateway/src/: audit.rs  certificate.rs  credentials.rs  error.rs  identity.rs  lib.rs  persistence.rs  protocol.rs  security.rs
crates/inari-gateway/src/onboarding/: code.rs  mod.rs  model.rs  service.rs
crates/inari-gateway/src/persistence/: audit.rs  commands.rs  enrollment.rs  fleet.rs  gateway_data.rs  mod.rs  onboarding.rs  publications.rs
crates/inari-gateway/src/persistence/entity/: agent.rs  audit_event.rs  command.rs  device.rs  invitation.rs  invitation_attempt.rs  mod.rs  organization.rs  publication.rs  site.rs  value.rs
crates/inari-gateway/src/protocol/: enrollment.rs  fleet.rs  identifiers.rs  jobs.rs  mod.rs  publications.rs  snapshot.rs  structured.rs  version.rs
crates/inari-migration/: Cargo.toml
crates/inari-migration/src/: lib.rs  m20260712_223023_create_fleet.rs  m20260712_223024_create_enrollment.rs  m20260712_223026_create_gateway_data.rs  m20260712_223027_create_sessions.rs
crates/inari-server/: Cargo.toml  config.example.toml
crates/inari-server/examples/: fake_device.rs
crates/inari-server/src/: app.rs  cli.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  observability.rs  protocol.rs  runtime.rs  shutdown.rs  state.rs
crates/inari-server/src/config/: identity.rs  managed_gateway.rs  platform.rs
crates/inari-server/src/coordination/: budget.rs  budget_kinds.rs  channel_capacity.rs  concurrency_limit.rs  mod.rs
crates/inari-server/src/http/: mod.rs  ssr_render.rs
crates/inari-server/src/http/routes/: auth.rs  mod.rs  system.rs
crates/inari-server/src/http/routes/api/: auth.rs  extract.rs  inari.rs  mod.rs  zenoh.rs
crates/inari-server/src/http/routes/api/v1/: mod.rs  protocol.rs  zenoh.rs
crates/inari-server/src/identity/: mod.rs  principal.rs  service.rs
crates/inari-server/src/managed_gateway/: certificate.rs  enrollment.rs  fleet.rs  jobs.rs  keyspace.rs  mod.rs  models.rs  runtime.rs  store.rs
crates/inari-server/src/time/: deadline.rs  mod.rs
crates/inari-server/src/zenoh/: access.rs  command.rs  handle.rs  mod.rs  reply.rs  session.rs  status.rs  supervisor.rs
crates/inari-server/src/zenoh/rest/: handler.rs  metadata.rs  mod.rs  negotiation.rs  request.rs  resolver.rs  response.rs  selector.rs  sse.rs  tests.rs
crates/inari-server/src/zenoh/session/: current.rs  generation.rs  lifecycle.rs  mod.rs
crates/inari-server/src/zenoh/supervisor/: attempt.rs  disabled.rs  enabled.rs  mod.rs  publish.rs  state.rs
crates/inari-server/tests/: agent_status_http.rs  config_env.rs  database_migrations.rs  onboarding_http.rs
crates/inari-web/: Cargo.toml
crates/inari-web-frontend/: Cargo.toml
crates/inari-web-frontend/src/: lib.rs
crates/inari-web/src/: app.rs  components.rs  lib.rs  server_fns.rs
crates/inari-web/src/pages/: home.rs  mod.rs  not_found.rs  operator.rs  setup.rs
crates/inari-web/src/pages/operator/: clipboard.rs  composer.rs  history.rs  mod.rs
crates/inari-web/src/server_fns/: ssr.rs
crates/inari-web/style/: main.css
deploy/helm/: ct.yaml  yamllint.yaml
deploy/helm/inari/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.schema.json  values.yaml
deploy/kustomize/inari/: README.md  kustomization.yaml  namespace.yaml  values.yaml
deploy/windows/: AppxManifest.template.xml  CHANGELOG.md  MsixAppInstallerData.xml  agent_service_entry.py  build.ps1  build.py  device_center_entry.py  frozen_runtime.py  inari.spec  package.toml  verify-machine-trust.ps1
deploy/windows/signing/: issuer.tpl  publisher.tpl  root.tpl
deploy/windows/tests/: test_build.py  test_frozen_runtime.py
docs/: brand.md  controller_database.md  gateway_protocol.md  kubernetes.md  managed_gateway_stacks.md  odoo-print-behaviours.md  releases.md  windows-code-signing.md  windows.md  zenoh_rest_axum.md
packaging/windows/: README.md  iot-agent-windows.example.toml
patches/zenoh-transport/: Cargo.toml  Cargo.toml.orig
scripts/: provision-windows-signing.sh  validate-kubernetes-server.sh  validate-kubernetes.sh
tooling/release/: package.json
tooling/release-core/: package.json
tooling/release-core/src/: index.ts  path.ts
tooling/release/src/: cli.ts  config.ts  index.ts  private-cargo.test.ts  private-cargo.ts  private-python.ts  publish-integrity.ts  targets.ts  workflow.test.ts  workflow.ts
tooling/tegami-helm/: package.json
tooling/tegami-msix/: package.json
(+35 files in other folders)
