[project]
name = "albatross"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.ty.environment]
root = ["./packages/agent", "./packages/agent_tray", "./packages/brand"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--strict-markers --strict-config"
timeout = 30
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
