[package]
name              = "inari-server"
version.workspace = true

authors.workspace     = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true

[dependencies]
axum.workspace               = true
base64.workspace             = true
bytes.workspace              = true
chrono.workspace             = true
config.workspace             = true
humantime-serde.workspace    = true
http.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tokio-stream.workspace       = true
toml.workspace               = true
tower.workspace              = true
tower-http.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
zenoh.workspace              = true
