[package]
name              = "inari-web-frontend"
version.workspace = true

authors.workspace     = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
inari-web = { path = "../inari-web", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
