[package]
name              = "inari-web"
version.workspace = true

authors.workspace     = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true

[dependencies]
base64.workspace = true
chrono.workspace = true
inari-gateway = { path = "../inari-gateway", optional = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
http.workspace = true
qrcode.workspace = true
secrecy = { workspace = true, optional = true }
serde.workspace = true
server_fn.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
url.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
hydrate = ["dep:wasm-bindgen-futures", "dep:web-sys", "leptos/hydrate"]
ssr = [
  "dep:inari-gateway",
  "dep:leptos_axum",
  "dep:secrecy",
  "dep:tracing",
  "dep:tower-sessions",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
